--- a/angular-herrera/src/app/app.component.html
+++ b/angular-herrera/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
-  <p>Ciao sono l'{{karla}} component</p>
+  <p>Ciao sono l'<span>{{karla}}</span> component</p>
   <app-second></app-second>
 </div>
